--- a/app/app.css
+++ b/app/app.css
@@ -25,8 +25,8 @@ components that have the btn class name.
  }
  
  .deleteIcon{
-     width: 125px;
-     height: 125px;
+     width: 30vw;
+     height: 30vh;
      margin-right: 20px;
  }
  
@@ -72,7 +72,9 @@ components that have the btn class name.
  
  .action-bar-title {
      color: #FCF7F8;
-     font-size: 30px;
+     font-size: 20%;
+     width: 100vw;
+     text-align: center;
  }
  
  .background{
