--- a/app/smallDark.css
+++ b/app/smallDark.css
@@ -25,10 +25,10 @@ components that have the btn class name.
  }
  
  .deleteIcon{
-     width: 125px;
-     height: 125px;
-     margin-right: 20px;
- }
+    width: 30vw;
+    height: 30vh;
+    margin-right: 20px;
+}
  
  .fab{
      color: #171A21;
