--- a/app/app.css
+++ b/app/app.css
@@ -9,78 +9,83 @@ In many cases you may want to use the NativeScript core theme instead
 of writing your own CSS rules. For a full list of class names in the theme
 refer to http://docs.nativescript.org/ui/theme.
 */
-@import '~nativescript-theme-core/css/core.light.css';
+@import "~nativescript-theme-core/css/core.light.css";
 
 /*
 For example, the following CSS rule changes the font size of all UI
 components that have the btn class name.
 */
 .btn {
-    font-size: 18;
+  font-size: 18;
 }
 
-
 .fa {
-    font-family: "FontAwesome";
- }
- 
- .deleteIcon{
-     width: 30vw;
-     height: 30vh;
-     margin-right: 20px;
- }
- 
- .fab{
-     color: #171A21;
-     font-size: 20px;
-     height: 60vh;
-     width: 60vw;
-     margin-right: 25px;
-     margin-bottom: 25px;
-     background-color:#FCF7F8;
-     border-radius: 50%;
-     float: right;
- }
+  font-family: "FontAwesome";
+}
 
- .listGroup{
-     border-color: #FCF7F8;
- }
- 
- .listGroupItem{
-     padding: 20 20 20 10;
-     border-color: #FCF7F8;
- }
- 
- .listGroupItemText{
-     color: #FCF7F8;
-     font-size: 24px;
- }
- 
- .txt{
-     color: #FCF7F8;
-     font-size: 24;
- }
- 
- .about{
-     color: #FCF7F8;
-     font-size: 20;
- }
- 
- .action-bar{
-     background-color: rgb(77, 77, 77);
- }
- 
- .action-bar-title {
-     color: #FCF7F8;
-     font-size: 20%;
-     width: 100vw;
-     text-align: center;
- }
- 
- .background{
-     background-color: #171A21;
- }
+.deleteIcon {
+  width: 30vw;
+  height: 30vh;
+  margin-right: 20px;
+}
 
- .inputB{
-    background-color:  rgb(128, 128, 128) ;
+.fab {
+  color: #171a21;
+  font-size: 20%;
+  text-align: center;
+  height: 50vh;
+  width: 50vw;
+  margin-right: 25px;
+  margin-bottom: 25px;
+  background-color: #fcf7f8;
+  border-radius: 50%;
+  float: right;
+}
+
+/* .listGroup {
+  border-color: #fcf7f8;
+  border-width: 1px;
+} */
+
+.listGroupItem {
+  padding: 20 20 20 10;
+  margin-left: 4vw;
+  margin-right: 4vw;
+  border-bottom-color: #fcf7f8;
+  border-bottom-width: 2px;
+}
+
+.listGroupItemText {
+  color: #fcf7f8;
+  font-size: 24px;
+}
+
+.txt {
+  color: #fcf7f8;
+  font-size: 24;
+}
+
+.about {
+  color: #fcf7f8;
+  font-size: 18%;
+}
+
+.action-bar {
+  background-color: rgb(77, 77, 77);
+}
+
+.action-bar-title {
+  color: #fcf7f8;
+  font-size: 20%;
+  max-width: 100vw;
+
+  text-align: center;
+}
+
+.background {
+  background-color: #171a21;
+}
+
+.inputB {
+  background-color: rgb(128, 128, 128);
 }
